Add Mooclet Policy Parameters JSON Editor to Design Step

--- a/frontend/projects/upgrade/src/app/features/dashboard/home/components/experiment-design/experiment-design.component.scss
+++ b/frontend/projects/upgrade/src/app/features/dashboard/home/components/experiment-design/experiment-design.component.scss
@@ -140,6 +140,13 @@
         color: var(--light-blue);
       }
     }
+
+    .json-editor-container {
+      display: flex;
+      flex-direction: column;
+      row-gap: 8px;
+      margin-bottom: 32px;
+    }
   }
 
   .validation-container {
