--- a/frontend/projects/upgrade/src/app/features/dashboard/profile/components/modals/add-metrics/add-metrics.component.scss
+++ b/frontend/projects/upgrade/src/app/features/dashboard/profile/components/modals/add-metrics/add-metrics.component.scss
@@ -3,7 +3,9 @@
     display: block;
     padding: 40px 40px 0;
     height: 108px;
+    box-shadow: 0 0 8px 0 rgba(0, 0, 0, 0.12);
   }
+
   .filter-container {
     margin: 16px;
     padding: 16px;
@@ -12,25 +14,6 @@
   .json-editor-container {
     margin-top: 20px;
     padding: 0 36px 20px;
-    height: 300px;
-  }
-
-  ::ng-deep .jsoneditor {
-    border: 0;
-    height: 300px;
-  }
-
-  ::ng-deep .jsoneditor-menu {
-    display: none;
-  }
-
-  ::ng-deep .ace-jsoneditor .ace_gutter {
-    border-right: 1px solid var(--blue);
-  }
-
-  ::ng-deep .ace-jsoneditor .ace_gutter-active-line,
-  ::ng-deep .ace-jsoneditor .ace_marker-layer .ace_active-line {
-    background-color: transparent;
   }
 
   .button-container {
