--- a/frontend/projects/upgrade/src/styles.scss
+++ b/frontend/projects/upgrade/src/styles.scss
@@ -524,35 +524,24 @@ button[mat-icon-button] {
     display: none;
   }
 
-  .ace-jsoneditor .ace_scroller {
-    background-color: mat.get-color-from-palette($background, background);
-  }
+  .ace-jsoneditor {
+    .ace_scroller {
+      background-color: mat.get-color-from-palette($background, background);
+    }
 
-  .ace-jsoneditor .ace_gutter {
-    background-color: mat.get-color-from-palette($background, background);
-    color: mat.get-color-from-palette($foreground, text);
-    border-right: 1px solid var(--blue);
-  }
+    .ace_gutter {
+      background-color: mat.get-color-from-palette($background, background);
+      color: mat.get-color-from-palette($foreground, text);
+      border-right: 1px solid var(--blue);
+    }
 
-  .ace-jsoneditor .ace_text-layer {
-    color: mat.get-color-from-palette($foreground, text);
-  }
+    .ace_text-layer, .ace_variable, .ace_string {
+      color: mat.get-color-from-palette($foreground, text);
+    }
 
-  .ace-jsoneditor .ace_variable {
-    color: mat.get-color-from-palette($foreground, text);
-  }
-
-  .ace-jsoneditor .ace_gutter-active-line {
-    color: mat.get-color-from-palette($foreground, text);
-    background-color: transparent;
-  }
-
-  .ace-jsoneditor .ace_marker-layer .ace_active-line {
-    color: mat.get-color-from-palette($foreground, text);
-    background-color: transparent;
-  }
-
-  .ace-jsoneditor .ace_string {
-    color: mat.get-color-from-palette($foreground, text);
+    .ace_gutter-active-line, .ace_marker-layer .ace_active-line {
+      color: mat.get-color-from-palette($foreground, text);
+      background-color: transparent;
+    }
   }
 }
