--- a/frontend/projects/upgrade/src/app/features/dashboard/home/components/experiment-design/experiment-design.component.html
+++ b/frontend/projects/upgrade/src/app/features/dashboard/home/components/experiment-design/experiment-design.component.html
@@ -444,7 +444,11 @@
             <div *ngIf="currentAssignmentAlgorithm$ | async as algo">
               <div *ngIf="shouldShowJsonEditor(algo)" class="json-editor-container">
                 <span class="title">{{ 'home.new-experiment.design.mooclet-policy-parameters.header.text' | translate }}</span>
-                <json-editor #policyEditor [options]="options"></json-editor>
+                <json-editor
+                  #policyEditor
+                  [options]="options"
+                  [data]="defaultPolicyParams[algo]"
+                ></json-editor>
               </div>
             </div>
           </div>
