Add assignment-algorithm.pipe.ts to properly format the assignmentAlgorithm.value

--- a/frontend/projects/upgrade/src/app/features/dashboard/home/components/experiment-overview/experiment-overview.component.html
+++ b/frontend/projects/upgrade/src/app/features/dashboard/home/components/experiment-overview/experiment-overview.component.html
@@ -117,7 +117,7 @@
               *ngFor="let assignmentAlgorithm of assignmentAlgorithms"
               [value]="assignmentAlgorithm.value"
             >
-              {{ assignmentAlgorithm.value | titlecase }}
+              {{ assignmentAlgorithm.value | assignmentAlgorithmFormat }}
             </mat-option>
           </mat-select>
         </mat-form-field>
