--- a/frontend/projects/upgrade/src/app/features/dashboard/home/components/experiment-overview/experiment-overview.component.html
+++ b/frontend/projects/upgrade/src/app/features/dashboard/home/components/experiment-overview/experiment-overview.component.html
@@ -180,6 +180,9 @@
         *ngIf="!isStratificationFactorSelected"
         [innerHTML]="stratificationFactorNotSelectedMsg | translate"
       ></span>
+      <span class="ft-14-600 validation-message" *ngIf="isDesignTypeChanged">
+        {{ 'home.view-experiment.enrollment-over-time.design-type-change-validation.text' | translate }}
+      </span>
     </div>
   </section>
 
@@ -213,9 +216,9 @@
         mat-raised-button
         class="shared-modal--modal-btn default-button"
         [ngClass]="{
-          'default-button--disabled': !isExperimentEditable || isContextOrTypeChanged
+          'default-button--disabled': !isExperimentEditable || isDesignTypeChanged
         }"
-        [disabled]="!isExperimentEditable || isContextOrTypeChanged"
+        [disabled]="!isExperimentEditable || isDesignTypeChanged"
         (click)="emitEvent(NewExperimentDialogEvents.SAVE_DATA)"
       >
         {{ 'global.save.text' | translate }}
