--- a/frontend/projects/upgrade/src/app/features/dashboard/home/components/experiment-overview/experiment-overview.component.scss
+++ b/frontend/projects/upgrade/src/app/features/dashboard/home/components/experiment-overview/experiment-overview.component.scss
@@ -58,6 +58,12 @@
   }
 }
 
+.validation-container {
+  min-height: 30px;
+  margin-top: 5px;
+  margin-bottom: 5px;
+}
+
 .loading-container {
   display: flex;
   height: 500px;
