check for segment name before sending req to create duplicate segment

--- a/frontend/projects/upgrade/src/app/features/dashboard/segments/components/modal/duplicate-segment/duplicate-segment.component.scss
+++ b/frontend/projects/upgrade/src/app/features/dashboard/segments/components/modal/duplicate-segment/duplicate-segment.component.scss
@@ -21,6 +21,10 @@
     }
   }
 
+  .validation-message {
+    margin-top: 8px;
+  }
+
   &-actions {
     justify-content: flex-end;
     margin: 0;
