Use clearer disabled color for the expand/collapse icon on the Import Feature Flag modal

--- a/frontend/projects/upgrade/src/app/features/dashboard/feature-flags/modals/import-feature-flag-modal/import-feature-flag-modal.component.scss
+++ b/frontend/projects/upgrade/src/app/features/dashboard/feature-flags/modals/import-feature-flag-modal/import-feature-flag-modal.component.scss
@@ -62,17 +62,16 @@
       }
     }
 
-    &.disabled {
-      opacity: 0.5;
-      cursor: default;
-    }
-
     .cdk-column-actions {
-      width: 10%;
+      width: 15%;
+
+      .expand-button--disabled {
+        opacity: 0.5;
+      }
     }
 
     .cdk-column-fileName {
-      width: 60%;
+      width: 55%;
     }
 
     .cdk-column-compatibilityType {
