--- a/frontend/projects/upgrade/src/app/features/dashboard/home/components/modal/export-experiment/export-experiment.component.scss
+++ b/frontend/projects/upgrade/src/app/features/dashboard/home/components/modal/export-experiment/export-experiment.component.scss
@@ -1,4 +1,9 @@
 .export-experiment-container {
+  .spinner {
+    width: 100%;
+    margin: auto;
+  }
+  
   .title {
     display: block;
     padding: 40px 40px 0;
