update scroll event handling in experiment list component

--- a/frontend/projects/upgrade/src/app/features/dashboard/home/components/experiment-list/experiment-list.component.html
+++ b/frontend/projects/upgrade/src/app/features/dashboard/home/components/experiment-list/experiment-list.component.html
@@ -80,7 +80,7 @@
     </div>
   </div>
 
-  <div scroll (scrolled)="fetchExperimentOnScroll()" class="experiment-list-table-container" #tableContainer>
+  <div (scroll)="onScroll()" class="experiment-list-table-container" #tableContainer>
     <mat-progress-bar class="spinner" mode="indeterminate" *ngIf="isLoadingExperiment$ | async"></mat-progress-bar>
     <table
       class="experiment-list"
