get defaults to work

--- a/frontend/projects/upgrade/src/app/features/dashboard/home/components/experiment-design/experiment-design.component.html
+++ b/frontend/projects/upgrade/src/app/features/dashboard/home/components/experiment-design/experiment-design.component.html
@@ -446,8 +446,7 @@
               <json-editor
                 #policyEditor
                 [options]="options"
-                [data]="defaultPolicyParametersForAlgorithm$ | async"
-                formControlName="moocletPolicyParameters"
+                [data]="defaultPolicyParametersForAlgorithm"
               ></json-editor>
               <span
                 class="ft-14-600 validation-message"
