Resolved merge conflicts

--- a/frontend/projects/upgrade/src/app/features/dashboard/home/components/experiment-overview/experiment-overview.component.html
+++ b/frontend/projects/upgrade/src/app/features/dashboard/home/components/experiment-overview/experiment-overview.component.html
@@ -126,7 +126,7 @@
           class="stratification-factor"
           appearance="outline"
           subscriptSizing="dynamic"
-          *ngIf="assignmentAlgorithmValue === 'stratified random sampling'"
+          *ngIf="assignmentAlgorithmValue === ASSIGNMENT_ALGORITHM.STRATIFIED_RANDOM_SAMPLING"
         >
           <mat-label class="ft-14-400">
             {{ 'home-global.stratification-factor.text' | translate }}
