--- a/frontend/projects/upgrade/src/app/features/dashboard/home/pages/view-experiment/view-experiment.component.html
+++ b/frontend/projects/upgrade/src/app/features/dashboard/home/pages/view-experiment/view-experiment.component.html
@@ -401,7 +401,7 @@
               </div>
 
               <!-- Stratification Factor-->
-              <div class="section-data" *ngIf="experiment.assignmentAlgorithm === 'stratified random sampling'">
+              <div class="section-data" *ngIf="experiment.assignmentAlgorithm === ASSIGNMENT_ALGORITHM.STRATIFIED_RANDOM_SAMPLING">
                 <span class="ft-16-600 section-data-title">
                   {{ 'home-global.stratification-factor.text' | translate | uppercase }}
                 </span>
