Apply the Assignment Algorithm format on the Experiment details page

--- a/frontend/projects/upgrade/src/app/features/dashboard/home/pages/view-experiment/view-experiment.component.html
+++ b/frontend/projects/upgrade/src/app/features/dashboard/home/pages/view-experiment/view-experiment.component.html
@@ -250,7 +250,7 @@
                 <span class="ft-16-600 section-data-title">
                   {{ 'home-global.assignment-algorithm.text' | translate | uppercase }}
                 </span>
-                <span class="ft-18-700 section-data-value">{{ experiment.assignmentAlgorithm | titlecase }} </span>
+                <span class="ft-18-700 section-data-value">{{ experiment.assignmentAlgorithm | assignmentAlgorithmFormat }} </span>
               </div>
             </div>
 
