Use existing Mooclet policy parameters from the backend when editing an experiment, and display JSON editor in a factorial experiment

--- a/frontend/projects/upgrade/src/app/features/dashboard/home/components/factorial-experiment-design/factorial-experiment-design.component.scss
+++ b/frontend/projects/upgrade/src/app/features/dashboard/home/components/factorial-experiment-design/factorial-experiment-design.component.scss
@@ -284,6 +284,13 @@
         color: var(--light-blue);
       }
     }
+
+    .json-editor-container {
+      display: flex;
+      flex-direction: column;
+      row-gap: 8px;
+      margin-bottom: 32px;
+    }
   }
 
   .level-container {
