--- a/frontend/projects/upgrade/src/app/features/dashboard/home/components/factorial-experiment-design/factorial-experiment-design.component.html
+++ b/frontend/projects/upgrade/src/app/features/dashboard/home/components/factorial-experiment-design/factorial-experiment-design.component.html
@@ -769,6 +769,20 @@
                 [experimentInfo]="experimentInfo"
                 [isExperimentEditable]="isExperimentEditable"
               ></app-conditions-table>
+
+              <div *ngIf="isMoocletExperimentDesign$ | async" class="json-editor-container">
+                <span class="title">{{ 'home.new-experiment.design.mooclet-policy-parameters.header.text' | translate }}</span>
+                <json-editor
+                  #policyEditor
+                  [options]="options"
+                  [data]="defaultPolicyParametersForAlgorithm"
+                ></json-editor>
+                <span
+                  class="ft-14-600 validation-message"
+                  *ngIf="moocletPolicyParametersErrors$ | async as errors"
+                  [innerHTML]="errors"
+                ></span>
+              </div>
             </div>
           </div>
         </section>
