--- a/frontend/projects/upgrade/src/app/features/dashboard/home/components/experiment-design/experiment-design.component.html
+++ b/frontend/projects/upgrade/src/app/features/dashboard/home/components/experiment-design/experiment-design.component.html
@@ -440,20 +440,13 @@
 
           <div *ngIf="decisionPoints.length && conditions.length">
             <app-payloads-table [experimentInfo]="experimentInfo"> </app-payloads-table>
-
-            <div *ngIf="isMoocletExperimentDesign$ | async" class="json-editor-container">
-              <span class="title">{{ 'home.new-experiment.design.mooclet-policy-parameters.header.text' | translate }}</span>
-              <json-editor
-                #policyEditor
-                [options]="options"
-                [data]="defaultPolicyParametersForAlgorithm"
-              ></json-editor>
-              <span
-                class="ft-14-600 validation-message"
-                *ngIf="moocletPolicyParametersErrors$ | async as errors"
-                [innerHTML]="errors"
-              ></span>
-            </div>
+            <app-mooclet-policy-editor
+              *ngIf="isMoocletExperimentDesign$ | async"
+              [experimentInfo]="experimentInfo"
+              [experimentName]="experimentName"
+              [currentAssignmentAlgorithm]="currentAssignmentAlgorithm$.value"
+              #policyEditor
+            ></app-mooclet-policy-editor>
           </div>
         </section>
       </form>
