Use async pipe for experiment name in template

--- a/frontend/projects/upgrade/src/app/features/dashboard/home/components/factorial-experiment-design/factorial-experiment-design.component.html
+++ b/frontend/projects/upgrade/src/app/features/dashboard/home/components/factorial-experiment-design/factorial-experiment-design.component.html
@@ -772,7 +772,7 @@
               <app-mooclet-policy-editor
                 *ngIf="isMoocletExperimentDesign$ | async"
                 [experimentInfo]="experimentInfo"
-                [experimentName]="experimentName"
+                [experimentName]="currentExperimentName$ | async"
                 [currentAssignmentAlgorithm]="currentAssignmentAlgorithm$.value"
                 #policyEditor
               ></app-mooclet-policy-editor>
