--- a/frontend/projects/upgrade/src/app/features/dashboard/home/components/experiment-design/experiment-design.component.html
+++ b/frontend/projects/upgrade/src/app/features/dashboard/home/components/experiment-design/experiment-design.component.html
@@ -443,7 +443,7 @@
             <app-mooclet-policy-editor
               *ngIf="isMoocletExperimentDesign$ | async"
               [experimentInfo]="experimentInfo"
-              [experimentName]="experimentName"
+              [experimentName]="currentExperimentName$ | async"
               [currentAssignmentAlgorithm]="currentAssignmentAlgorithm$.value"
               #policyEditor
             ></app-mooclet-policy-editor>
