Diable the 'Edit' button if moocletPolicyParameters exists

--- a/frontend/projects/upgrade/src/app/features/dashboard/home/pages/view-experiment/view-experiment.component.html
+++ b/frontend/projects/upgrade/src/app/features/dashboard/home/pages/view-experiment/view-experiment.component.html
@@ -29,7 +29,8 @@
             *ngIf="
               permissions?.experiments.update &&
               experiment.state !== ExperimentState.CANCELLED &&
-              experiment.state !== ExperimentState.ARCHIVED
+              experiment.state !== ExperimentState.ARCHIVED &&
+              !experiment.moocletPolicyParameters
             "
           >
             {{ 'home.view-experiment.edit-button.text' | translate }}
