--- a/frontend/projects/upgrade/src/app/features/dashboard/home/pages/view-experiment/view-experiment.component.html
+++ b/frontend/projects/upgrade/src/app/features/dashboard/home/pages/view-experiment/view-experiment.component.html
@@ -251,7 +251,7 @@
                 <span class="ft-16-600 section-data-title">
                   {{ 'home-global.assignment-algorithm.text' | translate | uppercase }}
                 </span>
-                <span class="ft-18-700 section-data-value">{{ experiment.assignmentAlgorithm | assignmentAlgorithmFormat }} </span>
+                <span class="ft-18-700 section-data-value">{{ ASSIGNMENT_ALGORITHM_DISPLAY_MAP[experiment.assignmentAlgorithm] }}</span>
               </div>
             </div>
 
