Mooclet Policy Parameters Frontend Only (WIP) (#2183)
* add assign mooclet proxy to assignment service

* Add Mooclet Policy Parameters JSON Editor to Design Step

* Remove import of deleted add-metrics.theme.scss from styles.scss

* Simplify the json-editor styles in styles.scss

* Make the Mooclet Policy Parameters JSON editor visible depending on the Assignment Algorithm

* Resolved merge conflicts

* Add assignment-algorithm.pipe.ts to properly format the assignmentAlgorithm.value

* class-validator and DTO example

* get defaults to work

* simplify things

* Resolved merge conflicts

* Update default outcome_variable_name to my_var

* Fix Mooclet editor initialization error and centralize subscription management

* Set the default outcome_variable_name with the experiment name set from Overview step

* Apply the Assignment Algorithm format on the Experiment details page

* Remove redundant policyEditorError

* Display Mooclet Policy Parameters JSON on the details page (frontend-only)

* Display JSON editor in a factorial experiment

* Extract shared Mooclet policy editor into separate component

* Remove redundant code

* Apply trim to the outcome_variable_name

* Readd some missing comments

* Fix the currentAssignmentAlgorithm$ not being reset to RANDOM when the modal is reopened

* Revert changes made to the old migration file

* Use async pipe for experiment name in template

* Diable the 'Edit' button if moocletPolicyParameters exists

* adding mooclet toggle to environments other than local so they will build in cicd

* Remove assignmentAlgorithmPipe and use ASSIGNMENT_ALGORITHM_DISPLAY_MAP instead

* Remove unused TsConfigurableParameters

* Revert backend changes

* Revert backend changes

* Revert backend changes

* Remove unused import

---------

Co-authored-by: danoswaltCL <doswalt@carnegielearning.com>

--- a/frontend/projects/upgrade/src/app/features/dashboard/home/components/experiment-design/experiment-design.component.html
+++ b/frontend/projects/upgrade/src/app/features/dashboard/home/components/experiment-design/experiment-design.component.html
@@ -440,6 +440,13 @@
 
           <div *ngIf="decisionPoints.length && conditions.length">
             <app-payloads-table [experimentInfo]="experimentInfo"> </app-payloads-table>
+            <app-mooclet-policy-editor
+              *ngIf="isMoocletExperimentDesign$ | async"
+              [experimentInfo]="experimentInfo"
+              [experimentName]="currentExperimentName$ | async"
+              [currentAssignmentAlgorithm]="currentAssignmentAlgorithm$.value"
+              #policyEditor
+            ></app-mooclet-policy-editor>
           </div>
         </section>
       </form>
