--- a/frontend/projects/upgrade/src/app/features/dashboard/home/components/experiment-overview/experiment-overview.component.html
+++ b/frontend/projects/upgrade/src/app/features/dashboard/home/components/experiment-overview/experiment-overview.component.html
@@ -117,7 +117,7 @@
               *ngFor="let assignmentAlgorithm of assignmentAlgorithms"
               [value]="assignmentAlgorithm.value"
             >
-              {{ assignmentAlgorithm.value | titlecase }}
+              {{ ASSIGNMENT_ALGORITHM_DISPLAY_MAP[assignmentAlgorithm.value] }}
             </mat-option>
           </mat-select>
         </mat-form-field>
@@ -126,7 +126,7 @@
           class="stratification-factor"
           appearance="outline"
           subscriptSizing="dynamic"
-          *ngIf="assignmentAlgorithmValue === 'stratified random sampling'"
+          *ngIf="assignmentAlgorithmValue === ASSIGNMENT_ALGORITHM.STRATIFIED_RANDOM_SAMPLING"
         >
           <mat-label class="ft-14-400">
             {{ 'home-global.stratification-factor.text' | translate }}
