--- a/frontend/projects/upgrade/src/app/features/dashboard/home/components/factorial-experiment-design/factorial-experiment-design.component.html
+++ b/frontend/projects/upgrade/src/app/features/dashboard/home/components/factorial-experiment-design/factorial-experiment-design.component.html
@@ -769,6 +769,13 @@
                 [experimentInfo]="experimentInfo"
                 [isExperimentEditable]="isExperimentEditable"
               ></app-conditions-table>
+              <app-mooclet-policy-editor
+                *ngIf="isMoocletExperimentDesign$ | async"
+                [experimentInfo]="experimentInfo"
+                [experimentName]="currentExperimentName$ | async"
+                [currentAssignmentAlgorithm]="currentAssignmentAlgorithm$.value"
+                #policyEditor
+              ></app-mooclet-policy-editor>
             </div>
           </div>
         </section>
