--- a/frontend/projects/upgrade/src/app/features/dashboard/home/pages/view-experiment/view-experiment.component.html
+++ b/frontend/projects/upgrade/src/app/features/dashboard/home/pages/view-experiment/view-experiment.component.html
@@ -29,7 +29,8 @@
             *ngIf="
               permissions?.experiments.update &&
               experiment.state !== ExperimentState.CANCELLED &&
-              experiment.state !== ExperimentState.ARCHIVED
+              experiment.state !== ExperimentState.ARCHIVED &&
+              !experiment.moocletPolicyParameters
             "
           >
             {{ 'home.view-experiment.edit-button.text' | translate }}
@@ -250,7 +251,7 @@
                 <span class="ft-16-600 section-data-title">
                   {{ 'home-global.assignment-algorithm.text' | translate | uppercase }}
                 </span>
-                <span class="ft-18-700 section-data-value">{{ experiment.assignmentAlgorithm | titlecase }} </span>
+                <span class="ft-18-700 section-data-value">{{ ASSIGNMENT_ALGORITHM_DISPLAY_MAP[experiment.assignmentAlgorithm] }}</span>
               </div>
             </div>
 
@@ -401,7 +402,7 @@
               </div>
 
               <!-- Stratification Factor-->
-              <div class="section-data" *ngIf="experiment.assignmentAlgorithm === 'stratified random sampling'">
+              <div class="section-data" *ngIf="experiment.assignmentAlgorithm === ASSIGNMENT_ALGORITHM.STRATIFIED_RANDOM_SAMPLING">
                 <span class="ft-16-600 section-data-title">
                   {{ 'home-global.stratification-factor.text' | translate | uppercase }}
                 </span>
@@ -755,6 +756,12 @@
                 ></mat-row>
               </mat-table>
             </ng-container>
+          </div>
+
+          <!-- Mooclet Policy Parameters JSON Viewer -->
+          <div class="json-viewer-container" *ngIf="experiment.moocletPolicyParameters">
+            <span class="ft-24-700">{{ 'home.view-experiment.experiment-mooclet-policy-parameters-title.text' | translate }}</span>
+            <pre class="ft-12-600">{{ displayMoocletParameters | json }}</pre>
           </div>
         </div>
       </mat-tab>
