--- a/frontend/projects/upgrade/src/styles.scss
+++ b/frontend/projects/upgrade/src/styles.scss
@@ -526,21 +526,21 @@ button[mat-icon-button] {
 
   .ace-jsoneditor {
     .ace_scroller {
-      background-color: mat.get-color-from-palette($background, background);
+      background-color: mat.m2-get-color-from-palette($background, background);
     }
 
     .ace_gutter {
-      background-color: mat.get-color-from-palette($background, background);
-      color: mat.get-color-from-palette($foreground, text);
+      background-color: mat.m2-get-color-from-palette($background, background);
+      color: mat.m2-get-color-from-palette($foreground, text);
       border-right: 1px solid var(--blue);
     }
 
     .ace_text-layer, .ace_variable, .ace_string {
-      color: mat.get-color-from-palette($foreground, text);
+      color: mat.m2-get-color-from-palette($foreground, text);
     }
 
     .ace_gutter-active-line, .ace_marker-layer .ace_active-line {
-      color: mat.get-color-from-palette($foreground, text);
+      color: mat.m2-get-color-from-palette($foreground, text);
       background-color: transparent;
     }
   }
