Disable overview and design steps during Mooclet experiment editing

--- a/frontend/projects/upgrade/src/app/features/dashboard/home/components/experiment-design/experiment-design.component.html
+++ b/frontend/projects/upgrade/src/app/features/dashboard/home/components/experiment-design/experiment-design.component.html
@@ -445,6 +445,7 @@
               [experimentInfo]="experimentInfo"
               [experimentName]="currentExperimentName$ | async"
               [currentAssignmentAlgorithm]="currentAssignmentAlgorithm$.value"
+              [isEditable]="isExperimentEditable"
               #policyEditor
             ></app-mooclet-policy-editor>
           </div>
