--- a/frontend/projects/upgrade/src/app/features/dashboard/home/pages/view-experiment/view-experiment.component.html
+++ b/frontend/projects/upgrade/src/app/features/dashboard/home/pages/view-experiment/view-experiment.component.html
@@ -920,6 +920,60 @@
               <mat-row *matRowDef="let row; columns: displayedMetricsColumns"></mat-row>
             </mat-table>
           </div>
+
+          <!-- Experiment reward metric table -->
+          <div class="table-container table-container-metrics">
+            <span class="ft-24-700">{{ 'home.new-experiment.metrics.reward-metric.text' | translate }}</span>
+            <mat-table [dataSource]="displayRewardMetrics" class="table">
+              <!-- Metrics Column -->
+              <ng-container matColumnDef="metricsKey">
+                <mat-header-cell class="ft-12-700" *matHeaderCellDef>
+                  {{ 'query.metric.text' | translate }}
+                </mat-header-cell>
+                <mat-cell class="ft-12-600" *matCellDef="let data">
+                  <div *ngFor="let key of data.metric_Key">
+                    <div class="metric-key">
+                      {{ key }}
+                    </div>
+                  </div>
+                </mat-cell>
+              </ng-container>
+
+              <!-- Statistic Column -->
+              <ng-container matColumnDef="metricsOperation">
+                <mat-header-cell class="ft-12-700" *matHeaderCellDef>
+                  {{ 'monitor.statistic.text' | translate }}
+                </mat-header-cell>
+                <mat-cell class="ft-12-600" *matCellDef="let data">
+                  <div *ngFor="let statisticOperation of data.metric_Operation">
+                    <div class="metric-Operation">
+                      {{ statisticOperation | titlecase }}
+                    </div>
+                  </div>
+                </mat-cell>
+              </ng-container>
+
+              <!-- Display Name Column -->
+              <ng-container matColumnDef="metricsName">
+                <mat-header-cell class="ft-12-700" *matHeaderCellDef>
+                  {{ 'home.new-experiment.metrics.description-header.placeholder.text' | translate }}
+                </mat-header-cell>
+                <mat-cell class="ft-12-600" *matCellDef="let data">
+                  <span *ngIf="data.metric_Name?.length < 50; else displayName">
+                    {{ data.metric_Name }}
+                  </span>
+                  <ng-template #displayName>
+                    <span [matTooltip]="data.metric_Name" matTooltipPosition="above">
+                      {{ data.metric_Name | truncate : 50 }}
+                    </span>
+                  </ng-template>
+                </mat-cell>
+              </ng-container>
+
+              <mat-header-row *matHeaderRowDef="displayedMetricsColumns"></mat-header-row>
+              <mat-row *matRowDef="let row; columns: displayedMetricsColumns"></mat-row>
+            </mat-table>
+          </div>
         </div>
       </mat-tab>
 
